--- a/src/main/resources/assets/mmctickets/messages_RU.conf
+++ b/src/main/resources/assets/mmctickets/messages_RU.conf
@@ -1,16 +1,16 @@
 action {
     claim-button="&f[&6Claim&f]"
-    claim-button-hover="&eНажмите здесь, чтобы утвердить этот запрос."
+    claim-button-hover="&eНажмите здесь, чтобы занять этот запрос."
     close-button="&f[&6Close&f]"
     close-button-hover="&eНажмите здесь, чтобы закрыть этот запрос."
     comment-button="&f[&6Comment&f]"
     comment-button-hover="&eНажмите здесь, чтобы оставить комментарий к этому запросу."
     hold-button="&f[&6Hold&f]"
-    hold-button-hover="&eНажмите здесь, чтобы удержать этот запрос."
+    hold-button-hover="&eНажмите здесь, чтобы поставить этот запрос на удержание."
     reopen-button="&f[&6Reopen&f]"
     reopen-button-hover="&eНажмите здесь, чтобы восстановить этот запрос."
     unclaim-button="&f[&6Unclaim&f]"
-    unclaim-button-hover="&eClick here to unclaim this ticket."
+    unclaim-button-hover="&eНажмите здесь, чтобы перестать занимать этот запрос."
     yes-button="&f[&6Yes&f]"
 }
 error {
@@ -31,7 +31,7 @@ error {
     user-not-exist="&cИгрок {0} не существует или содержит неправильные символы."
 }
 plugin {
-    outdated="&cYou are not running the latest recommended build! Recommended build is: &6{0}"
+    outdated="&cВы используете старую версию. Рекомендовано: &6{0}"
 }
 staff {
     list-empty="&eСейчас нет персонала онлайн."
@@ -43,38 +43,38 @@ teleport {
     to-ticket="&9Телепортированы к запросу #{0}."
 }
 ticket {
-    assign="&6{0} has been assigned to ticket #{1}."
-    assign-user="&6Your ticket #{0} has been assigned to {1}."
-    claim="&6{0} is now handling ticket #{1}."
-    claim-user="&6{0} is now handling your ticket #{1}."
-    close="&6Ticket #{0} was closed by {1}."
-    close-offline="&6A ticket has been closed while you were offline."
-    close-offline-multi="&6While you were gone, {0} tickets were closed. Use /{1} to see your currently open tickets."
-    close-user="&6Your Ticket #{0} has been closed by {1}."
-    comment="&6A comment was added to ticket #{0} by {1}."
-    comment-edit="&6Ticket #{0} already has a comment attached. Do you wish to overwrite this?"
-    comment-user="&6Your comment was added to ticket #{0}."
-    duplicate="&cYour ticket has not been opened because it was detected as a duplicate."
-    hold="&6Ticket #{0} was put on hold by {1}"
-    hold-user="&6Your ticket #{0} was put on hold by {1}"
-    not-claimed="&cTicket #{0} is not claimed."
-    not-exist="&cTicket #{0} does not exist."
-    not-open="&cThe ticket #{0} is not open."
-    on-hover-teleport-to="Click here to teleport to this tickets location."
+    assign="&6Запрос #{1} был прикреплен к {0}"
+    assign-user="&6Ваш запрос #{0} был прикреплен к {1}."
+    claim="&6{0} обрабатывает запрос #{1}."
+    claim-user="&6{0} обрабатывает ваш запрос #{1}."
+    close="&6Запрос #{0} был закрыт модератором {1}."
+    close-offline="&6Запрос был закрыт пока вы были онлайн."
+    close-offline-multi="&6Пока вас не было, {0} запросы были закрыты. Используйте /{1} чтобы посмотреть ваши текущие открытые запросы."
+    close-user="&6Ваш запрос #{0} был закрыт игроком {1}."
+    comment="&6Комментарий был добавлен в запрос #{0} игроком {1}."
+    comment-edit="&6К запросу #{0} уже приклеплен комментарий. Вы хотите его перезаписать?"
+    comment-user="&6Ваш комментарий был прикреплен к #{0}."
+    duplicate="&cВаш запрос не может быть открыт, он был помечен как дубликат."
+    hold="&6Запрос #{0} был поставлен на удержание {1}"
+    hold-user="&6Ваш запрос #{0} был поставлен на удержание {1}"
+    not-claimed="&cЗапрос #{0} не занят."
+    not-exist="&cЗапрос #{0} не существует."
+    not-open="&cЗапрос #{0} не открыт."
+    on-hover-teleport-to="Нажмите здесь, чтобы телепортироваться к месту запроса."
     open="&aA new ticket has been opened by {0}, id assigned #{1}."
-    open-title-notification="A new ticket has been opened by {0}, id assigned #{1}."
-    open-user="&6You opened a ticket, it has been assigned ID #{0}. A staff member should be with you soon."
-    read-none="&6There are no open tickets."
-    read-none-closed="&6There are no closed tickets."
-    read-none-held="&6There are no tickets currently on hold."
-    read-none-self="&6You have no open tickets."
-    reopen="&6{0} has reopened ticket #{1}"
-    reopen-user="&6{0} has reopened your ticket #{1}"
-    too-fast="&cYou need to wait {0} seconds before attempting to open another ticket."
-    too-many="&cYou have too many open tickets, please wait before opening more."
-    too-short="&cYour ticket needs to contain at least {0} words."
-    unclaim="&6{0} is no longer handling ticket #{1}."
-    unclaim-user="&6{0} is no longer handling your ticket #{1}."
-    unresolved="&aThere are {0} open tickets. Type /{1} to see them."
-    unresolved-held="&aThere are {0} open tickets and {1} ticket on hold. Type /{2} to see them."
+    open-title-notification="Новый запрос был открыт игроком {0}, прикреплен ID #{1}."
+    open-user="&6Вы открыли запрос, к нему был прикреплен ID #{0}. Персонал проверит запрос позже."
+    read-none="&6Нет открытых запросов."
+    read-none-closed="&6Сейчас нет закрытых запросов."
+    read-none-held="&6Сейчас нет запросов на удержании."
+    read-none-self="&6У вас нет открытых запросов."
+    reopen="&6{0} восстановил запрос #{1}"
+    reopen-user="&6{0} возобновил ваш запрос #{1}"
+    too-fast="&cВам нужно подождать {0} секунд перед открытием нового запроса."
+    too-many="&cВы открыли слишком много запросов, подождите перед открытием нового."
+    too-short="&cЗапрос должен содержать как минимум {0} слов."
+    unclaim="&6{0} больше не обрабатывает запрос #{1}."
+    unclaim-user="&6{0} больше не обрабатывает ваш запрос #{1}."
+    unresolved="&aСейчас {0} открытых запросов. Введите /{1} чтобы их увидеть."
+    unresolved-held="&aСейчас {0} открытых запросов и {1} запросов на удержании. Введите /{2} чтобы их увидеть."
 }
