--- a/src/main/resources/assets/mmctickets/messages_IT.conf
+++ b/src/main/resources/assets/mmctickets/messages_IT.conf
@@ -5,42 +5,42 @@ action {
     close-button-hover="&eClicca qui per chiudere questo ticket."
     comment-button="&f[&6Commenta&f]"
     comment-button-hover="&eClicca qui per mettere un commento al ticket."
-    hold-button="&f[&6Hold&f]"
-    hold-button-hover="&eClick here to put this ticket on hold."
-    reopen-button="&f[&6Reopen&f]"
-    reopen-button-hover="&eClick here to reopen this ticket."
-    unclaim-button="&f[&6Unclaim&f]"
-    unclaim-button-hover="&eClick here to unclaim this ticket."
+    hold-button="&f[&6Attesa&f]"
+    hold-button-hover="&eClicca qui per mettere il ticket in attesa."
+    reopen-button="&f[&6Riapri&f]"
+    reopen-button-hover="&eClicca qui per riaprire questo ticket."
+    unclaim-button="&f[&6De-Assegna&f]"
+    unclaim-button-hover="&eClicca qui per rimuoverti il ticket."
     yes-button="&f[&6Yes&f]"
 }
 error {
-    ban-user="&cCannot ban {0} from opening new ticket."
-    banned="&cYou are not allowed to open new ticket."
-    banned-already="&c{0} is already banned from opening tickets."
-    general="&cAn error occurred. {0}"
-    incorrect-usage="&cIncorrect Usage: {0}"
-    not-banned="&c{0} is not banned from opening tickets."
-    permission="&eYou need permission \"{0}\" to do that."
-    ticket-already-closed="&cTicket is already closed."
-    ticket-already-on-hold="&cTicket is already on hold."
-    ticket-claim="&cTicket #{0} is already claimed by {1}."
-    ticket-not-closed="&cTicket #{0} is not closed or on hold."
-    ticket-owner="&cYou are not the owner of that ticket."
-    ticket-unclaim="&cTicket #{0} is claimed by {1}."
-    unban-user="&cCannot unban {0} from opening new ticket."
-    user-not-exist="&cThe specified user {0} does not exist or contains invalid characters."
+    ban-user="&cNon puoi bannare {0} dall'aprire altri ticket."
+    banned="&cNon puoi aprire altri ticket."
+    banned-already="&c{0} è già bannato per aver aperto ticket."
+    general="&cSi è verificato un errore. {0}"
+    incorrect-usage="&cUtilizzo incorretto: {0}"
+    not-banned="&c{0} non è bannato per aver aperto ticket."
+    permission="&eHai bisogno del permesso \"{0}\" per farlo."
+    ticket-already-closed="&cIl Ticket è già chiuso."
+    ticket-already-on-hold="&cIl Ticket è già in attesa."
+    ticket-claim="&cIl Ticket #{0} è già assegnato a {1}."
+    ticket-not-closed="&cIl Ticket #{0} non è chiuso o in attesa."
+    ticket-owner="&cNon sei il proprietario del ticket."
+    ticket-unclaim="&cIl Ticket #{0} è assegnato a {1}."
+    unban-user="&cNon puoi sbannare {0} dall'aprire ticket."
+    user-not-exist="&cL'utente specificato {0} non esiste o contiene caratteri non validi."
 }
 plugin {
-    outdated="&cYou are not running the latest recommended build! Recommended build is: &6{0}"
+    outdated="&cNon stai eseguendo l'ultima build consigliata! La build consigliata è: &6{0}"
 }
 staff {
-    list-empty="&eThere are no staff members online."
+    list-empty="&eNon ci sono membri dello."
     list-padding="="
     list-separator="&e, "
-    list-title="&6Online Staff"
+    list-title="&6Staff Online"
 }
 teleport {
-    to-ticket="&9Teleported to ticket #{0}."
+    to-ticket="&9Teleportato al ticket #{0}."
 }
 ticket {
     assign="&6{0} has been assigned to ticket #{1}."
