--- a/src/main/resources/assets/mmctickets/messages_IT.conf
+++ b/src/main/resources/assets/mmctickets/messages_IT.conf
@@ -43,38 +43,38 @@ teleport {
     to-ticket="&9Teleportato al ticket #{0}."
 }
 ticket {
-    assign="&6{0} has been assigned to ticket #{1}."
-    assign-user="&6Your ticket #{0} has been assigned to {1}."
-    claim="&6{0} is now handling ticket #{1}."
-    claim-user="&6{0} is now handling your ticket #{1}."
-    close="&6Ticket #{0} was closed by {1}."
-    close-offline="&6A ticket has been closed while you were offline."
-    close-offline-multi="&6While you were gone, {0} tickets were closed. Use /{1} to see your currently open tickets."
-    close-user="&6Your Ticket #{0} has been closed by {1}."
-    comment="&6A comment was added to ticket #{0} by {1}."
-    comment-edit="&6Ticket #{0} already has a comment attached. Do you wish to overwrite this?"
-    comment-user="&6Your comment was added to ticket #{0}."
-    duplicate="&cYour ticket has not been opened because it was detected as a duplicate."
-    hold="&6Ticket #{0} was put on hold by {1}"
-    hold-user="&6Your ticket #{0} was put on hold by {1}"
-    not-claimed="&cTicket #{0} is not claimed."
-    not-exist="&cTicket #{0} does not exist."
-    not-open="&cThe ticket #{0} is not open."
-    on-hover-teleport-to="Click here to teleport to this tickets location."
-    open="&aA new ticket has been opened by {0}, id assigned #{1}."
-    open-title-notification="A new ticket has been opened by {0}, id assigned #{1}."
-    open-user="&6You opened a ticket, it has been assigned ID #{0}. A staff member should be with you soon."
-    read-none="&6There are no open tickets."
-    read-none-closed="&6There are no closed tickets."
-    read-none-held="&6There are no tickets currently on hold."
-    read-none-self="&6You have no open tickets."
-    reopen="&6{0} has reopened ticket #{1}"
-    reopen-user="&6{0} has reopened your ticket #{1}"
-    too-fast="&cYou need to wait {0} seconds before attempting to open another ticket."
-    too-many="&cYou have too many open tickets, please wait before opening more."
-    too-short="&cYour ticket needs to contain at least {0} words."
-    unclaim="&6{0} is no longer handling ticket #{1}."
-    unclaim-user="&6{0} is no longer handling your ticket #{1}."
-    unresolved="&aThere are {0} open tickets. Type /{1} to see them."
-    unresolved-held="&aThere are {0} open tickets and {1} ticket on hold. Type /{2} to see them."
+    assign="&6{0} è stato assegnato al ticket #{1}."
+    assign-user="&6Il tuo ticket #{0} è stato assegnato a {1}."
+    claim="&6{0} sta gestendo il ticket #{1}."
+    claim-user="&6{0} sta ora gestendo il tuo ticket #{1}."
+    close="&6Il ticket #{0} è stato chiuso da {1}."
+    close-offline="&6Un ticket è stato chiuso mentre eri offline."
+    close-offline-multi="&6Mentre eri via, {0} ticket sono stati chiusi. Usa /{1} per vedere i tuoi ticket aperti."
+    close-user="&6Il tuo Ticket #{0} è stato chiuso da {1}."
+    comment="&6Un commento è stato aggiunto al ticket #{0} da {1}."
+    comment-edit="&6Il ticket #{0} ha già un commento collegato. Vuoi sovrascriverlo?"
+    comment-user="&6Il tuo commento è stato aggiunto al ticket #{0}."
+    duplicate="&cIl tuo ticket non è stato aperto perché è stato individuato come duplicato."
+    hold="&6Il ticket #{0} è stato messo in attesa da {1}"
+    hold-user="&6Il tuo ticket #{0} è stato messo in attesa da {1}"
+    not-claimed="&cIl ticket #{0} non è assegnato."
+    not-exist="&cIl ticket #{0} non esiste."
+    not-open="&cIl ticket #{0} non è aperto."
+    on-hover-teleport-to="Clicca qui per teletrasportarti alla posizione del ticket."
+    open="&aUn nuovo ticket è stato aperto da {0}, id assegnato #{1}."
+    open-title-notification="Un nuovo ticket è stato aperto da {0}, id assegnato #{1}"
+    open-user="&6Hai aperto un ticket, gli è stato assegnato l'ID #{0}. Un membro dello staff ti raggiungerà presto."
+    read-none="&6Non ci sono ticket aperti."
+    read-none-closed="&6Non ci sono ticket chiusi."
+    read-none-held="&6Non ci sono attualmente ticket in attesa."
+    read-none-self="&6Non hai ticket aperti."
+    reopen="&6{0} ha riaperto il ticket #{1}"
+    reopen-user="&6{0} ha riaperto il tuo ticket #{1}"
+    too-fast="&Devi aspettare {0} secondi prima di provare ad aprire un altro ticket."
+    too-many="&cHai troppi ticket aperti, aspetta prima di aprirne altri."
+    too-short="&cIl tuo ticket deve contenere almeno {0} parole."
+    unclaim="&6{0} non sta più gestendo il ticket #{1}."
+    unclaim-user="&6{0} non sta più gestendo il tuo ticket #{1}."
+    unresolved="&aCi sono {0} ticket aperti. Scrivi /{1} per vederli."
+    unresolved-held="&aCi sono {0} ticket aperti e {1} ticket in attesa. Scrivi /{2} per vederli."
 }
