--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 *.war
 *.ear
 
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
@@ -28,6 +31,8 @@ buildNumber.properties
 /out/
 /.idea/
 *.iml
+*.ipr
+*.iws
 
 ## gradle ##
 /build/
