--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,8 @@ tasks.withType(JavaCompile) {
 
 repositories {
      maven { url "https://mvnrepository.com/artifact/org.projectlombok/lombok" }
-     maven { url "http://repo.spongepowered.org/maven" }
-     maven { url "http://repo.maven.apache.org/maven2" }
+     maven { url "https://repo.spongepowered.org/maven" }
+     maven { url "https://repo.maven.apache.org/maven2" }
      maven { url "https://repo.codemc.org/repository/maven-public" }
 }
 
