--- a/build.gradle
+++ b/build.gradle
@@ -27,14 +27,14 @@ repositories {
 
 dependencies {
     compile group: 'com.zaxxer', name: 'HikariCP', version:'3.3.1'
-    compile group: 'org.bstats', name: 'bstats-sponge', version:'1.4'
+    //compile group: 'org.bstats', name: 'bstats-sponge', version:'1.4'
     compileOnly group: 'org.projectlombok', name: 'lombok', version:'1.18.0'
     compileOnly group: 'org.spongepowered', name: 'spongeapi', version:'7.1.0-SNAPSHOT'
 }
 
 shadowJar {
     dependencies {
-        include(dependency("org.bstats:bstats-sponge:1.4"))
+        //include(dependency("org.bstats:bstats-sponge:1.4"))
     }
     classifier = ''
 }
