--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 
 group = 'net.moddedminecraft'
-version = '2.0.8-API-7'
+version = '2.1.0-API-8'
 
 description = """MMCTickets"""
 
@@ -19,22 +19,17 @@ tasks.withType(JavaCompile) {
 
 
 repositories {
-     maven { url "https://mvnrepository.com/artifact/org.projectlombok/lombok" }
-     maven { url "https://repo.spongepowered.org/maven" }
-     maven { url "https://repo.maven.apache.org/maven2" }
-     maven { url "https://repo.codemc.org/repository/maven-public" }
+    mavenCentral()
+    maven { url "https://mvnrepository.com/artifact/org.projectlombok/lombok" }
+    maven { url "https://repo.spongepowered.org/maven" }
+    maven { url "https://repo.maven.apache.org/maven2" }
+    maven { url "https://repo.codemc.org/repository/maven-public" }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
-    compile group: 'com.zaxxer', name: 'HikariCP', version:'3.3.1'
-    //compile group: 'org.bstats', name: 'bstats-sponge', version:'1.4'
+    compileOnly(files("libs/LocaleAPI-2.6.0-S8.0.0-RELEASE.jar"))
+    compile group: 'com.zaxxer', name: 'HikariCP', version:'4.0.3'
     compileOnly group: 'org.projectlombok', name: 'lombok', version:'1.18.0'
-    compileOnly group: 'org.spongepowered', name: 'spongeapi', version:'7.1.0-SNAPSHOT'
-}
-
-shadowJar {
-    dependencies {
-        //include(dependency("org.bstats:bstats-sponge:1.4"))
-    }
-    classifier = ''
+    compileOnly group: 'org.spongepowered', name: 'spongeapi', version:'8.2.0'
 }
